--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,8 +11,10 @@ dependencies:
     sdk: flutter
   flutter_dotenv: ^5.2.1
   flutter_riverpod: ^2.6.1
+  http: ^1.3.0
   livekit_client: ^2.4.1
   riverpod_annotation: ^2.6.1
+  uuid: ^4.5.1
 
 dev_dependencies:
   flutter_test:
